--- a/D3_data_journalism/StarterCode/index.html
+++ b/D3_data_journalism/StarterCode/index.html
@@ -28,17 +28,11 @@
       <div class="col-xs-12  col-md-9">
         <div class="article">
           <h2>Correlations Discovered Between Health Risks and Age, Income</h2>
-          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-            quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-            ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+          <p>There was a positive correlation between percent of people in each state in poverty and the percent of people who lacked healthcare, percent who were obese, and percent who smoke of 0.52, 0.46, and 0.52, respectively. There was a positive correlation of median age and percent who smoke of 0.24. Having a smoking habit is more prevalent among older people. Perhaps people got addicted to tobacco products before the health effects of them were known and continued the habit since then. There was a negative correlation of median age with percent who lack healthcare of -0.38. The older you get the more likely you are to have healthcare. </p>
 
-          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-            quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-            ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+          <p>Median income a had a strong negative correlation of -0.65 with percent obese, -0.66 with percent who smoke, and -0.43 with percent who lack healthcare. The more money you make the better your health standards are. Lack of Healthcare had a positive correlation with the percent who are obese of 0.36. We don’t know if the lack of healthcare leads to more allowing attitudes towards obesity or that there is a third variable, such as income, that relates to both factors and makes it more difficult to afford a healthy diet and time to exercise as well as healthcare benefits.</p>
 
-          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-            quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-            ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+          <p>The strongest correlation was a positive correlation between obesity and a smoking habit of 0.74. A smoking habit is also more prevalent among the obese and vice versa. It seems lax standards of personal health spread across aspects of one’s life. Overall, it is clear the way to improve someone’s standard of living is to help raise them into a higher income bracket. This will impact their health, their habits, and their coverage.</p>
         </div>
       </div>
     </div>
@@ -52,6 +46,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <script src="https://d3js.org/d3.v5.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
   <script type="text/javascript" src="assets/js/app.js"></script>
 
 </body>
