description in bullets

--- a/D3_data_journalism/StarterCode/index.html
+++ b/D3_data_journalism/StarterCode/index.html
@@ -14,7 +14,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-md-12">
-        <h1>D3Times</h1>
+        <h1>Health Risks, Age, and Income</h1>
       </div>
     </div>
     <div class="row">
@@ -27,12 +27,26 @@
     <div class="row">
       <div class="col-xs-12  col-md-9">
         <div class="article">
-          <h2>Correlations Discovered Between Health Risks and Age, Income</h2>
-          <p>There was a positive correlation between percent of people in each state in poverty and the percent of people who lacked healthcare, percent who were obese, and percent who smoke of 0.52, 0.46, and 0.52, respectively. There was a positive correlation of median age and percent who smoke of 0.24. Having a smoking habit is more prevalent among older people. Perhaps people got addicted to tobacco products before the health effects of them were known and continued the habit since then. There was a negative correlation of median age with percent who lack healthcare of -0.38. The older you get the more likely you are to have healthcare. </p>
+          <h2>Correlations:</h2>
+          <ul>
+            <h3>Poverty Correlations</h3>
+            <li>There was a positive correlation between percent of people in each state in poverty and the percent of people who lacked healthcare of 0.52</li>
+            <li>There was a positive correlation between percent of people in each state in poverty and the percent who were obese of 0.46</li>
+            <li>There was a positive correlation between percent of people in each state in poverty and the percent who smoke of 0.52</li>
 
-          <p>Median income a had a strong negative correlation of -0.65 with percent obese, -0.66 with percent who smoke, and -0.43 with percent who lack healthcare. The more money you make the better your health standards are. Lack of Healthcare had a positive correlation with the percent who are obese of 0.36. We don’t know if the lack of healthcare leads to more allowing attitudes towards obesity or that there is a third variable, such as income, that relates to both factors and makes it more difficult to afford a healthy diet and time to exercise as well as healthcare benefits.</p>
-
-          <p>The strongest correlation was a positive correlation between obesity and a smoking habit of 0.74. A smoking habit is also more prevalent among the obese and vice versa. It seems lax standards of personal health spread across aspects of one’s life. Overall, it is clear the way to improve someone’s standard of living is to help raise them into a higher income bracket. This will impact their health, their habits, and their coverage.</p>
+            <h3>Age Correlations</h3>
+            <li>There was a positive correlation of median age and percent who smoke of 0.24. Having a smoking habit is more prevalent among older people. Perhaps people got addicted to tobacco products before the health effects of them were known and continued the habit since then.</li>
+            <li>There was a negative correlation of median age with percent who lack healthcare of -0.38. The older you get the more likely you are to have healthcare.</li>
+            
+            <h3>Income Correlations</h3>
+            <li>Median income had a strong negative correlation of -0.65 with the percent of people who are obese</li>
+            <li>Median income had a strong negative correlation of -0.66 with the percent of people who smoke</li>
+            <li>Median income had a strong negative correlation of -0.43 with the percent of people who lack healthcare</li>
+            <h3>Smoking and Obesity</h3>
+            <li>Lack of Healthcare had a positive correlation with the percent who are obese of 0.36. We don’t know if the lack of healthcare leads to more allowing attitudes towards obesity or that there is a third variable, such as income, that relates to both factors and makes it more difficult to afford a healthy diet and time to exercise as well as healthcare benefits.</li>
+            <li>The strongest correlation was a positive correlation between obesity and a smoking habit of 0.74. A smoking habit is also more prevalent among the obese and vice versa. It seems lax standards of personal health spread across aspects of one’s life.</li>
+          </ul>
+          <p>Overall, it is clear the way to improve someone’s standard of living is to help raise them into a higher income bracket. This will impact their health, their habits, and their coverage.</p>
         </div>
       </div>
     </div>
