--- a/D3_data_journalism/StarterCode/index.html
+++ b/D3_data_journalism/StarterCode/index.html
@@ -62,6 +62,7 @@
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
   <script type="text/javascript" src="assets/js/app.js"></script>
+  <script type="text/javascript" src="assets/js/geojson.js"></script>
 
 </body>
 
