--- a/D3_data_journalism/StarterCode/index.html
+++ b/D3_data_journalism/StarterCode/index.html
@@ -59,10 +59,27 @@
         </div>
       </div>
     </div>
+    <div class="row">
+      <div class="col-xs-12  col-md-9">
+        <select id="health_factor">
+          <option value="healthcare">% Lacks Healthcare</option>
+          <option value="income">Median Income</option>
+          <option value="age">Median Age</option>
+          <option value="smokes">% who Smokes</option>
+          <option value="obesity">% Obese</option>
+          <option value="poverty">% in Poverty</option>
+        </select>
+      
+        <button id="btn" type="button">Submit</button>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-12  col-md-9">
+        <div id="map"></div>
+      </div>
+    </div>
   </div>
 
-  <div id="map"></div>
-  
   <!-- Footer-->
   <div id="footer">
     <p>The Coding Boot Camp&copy;2016</p>
