map layer creation from on click to on change

--- a/D3_data_journalism/StarterCode/index.html
+++ b/D3_data_journalism/StarterCode/index.html
@@ -57,6 +57,8 @@
           </ul>
           <p>Overall, it is clear the way to improve someone’s standard of living is to help raise them into a higher income bracket. This will impact their health, their habits, and their coverage.</p>
         </div>
+        <h4>Map</h4>
+        <p>Click here to see a geographic correlation of the health factors:</p>
       </div>
     </div>
     <div class="row">
@@ -69,8 +71,6 @@
           <option value="obesity">% Obese</option>
           <option value="poverty">% in Poverty</option>
         </select>
-      
-        <button id="btn" type="button">Submit</button>
       </div>
     </div>
     <div class="row">
