--- a/StarterCode/plot.html
+++ b/StarterCode/plot.html
@@ -20,6 +20,10 @@
 </head>
 
 <body>
+  <div class="menu">
+    <a class="header" href="./">Health Risks</a>
+  </div>
+
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-md-12">
@@ -51,6 +55,7 @@
             <li>Median income had a strong negative correlation of -0.65 with the percent of people who are obese</li>
             <li>Median income had a strong negative correlation of -0.66 with the percent of people who smoke</li>
             <li>Median income had a strong negative correlation of -0.43 with the percent of people who lack healthcare</li>
+            
             <h3>Smoking and Obesity</h3>
             <li>Lack of Healthcare had a positive correlation with the percent who are obese of 0.36. We don’t know if the lack of healthcare leads to more allowing attitudes towards obesity or that there is a third variable, such as income, that relates to both factors and makes it more difficult to afford a healthy diet and time to exercise as well as healthcare benefits.</li>
             <li>The strongest correlation was a positive correlation between obesity and a smoking habit of 0.74. A smoking habit is also more prevalent among the obese and vice versa. It seems lax standards of personal health spread across aspects of one’s life.</li>
