header on landing page

--- a/StarterCode/index.html
+++ b/StarterCode/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div class="background">
-        
+        <div class="menu">
+            <a class="header" href="./">Health Risks</a>
+          </div>        
     </div>
 </body>
 </html>
