renamed assets to static

--- a/StarterCode/index.html
+++ b/StarterCode/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel='stylesheet' href='assets/css/style2.css'>
+    <link rel='stylesheet' href='static/css/style2.css'>
     <title>Health Risks</title>
 </head>
 <body>
     <div class="background">
         <div class="menu">
-            <a class="header" href="./">Health Risks</a>
-          </div>        
+            <a class="header" href="./plot.html">Health Risks</a>
+        </div>        
     </div>
 </body>
 </html>
