--- a/StarterCode/plot.html
+++ b/StarterCode/plot.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <title>Health Risks</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel="stylesheet" href="assets/css/style.css">
-  <link rel="stylesheet" href="assets/css/d3Style.css">
+  <link rel="stylesheet" href="static/css/style.css">
+  <link rel="stylesheet" href="static/css/d3Style.css">
 
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
   integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
@@ -15,7 +15,7 @@
    integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
    crossorigin=""></script>
 
-   <script type="text/javascript" src="assets/js/choropleth.js"></script>
+   <script type="text/javascript" src="static/js/choropleth.js"></script>
 
 </head>
 
@@ -55,7 +55,7 @@
             <li>Median income had a strong negative correlation of -0.65 with the percent of people who are obese</li>
             <li>Median income had a strong negative correlation of -0.66 with the percent of people who smoke</li>
             <li>Median income had a strong negative correlation of -0.43 with the percent of people who lack healthcare</li>
-            
+
             <h3>Smoking and Obesity</h3>
             <li>Lack of Healthcare had a positive correlation with the percent who are obese of 0.36. We don’t know if the lack of healthcare leads to more allowing attitudes towards obesity or that there is a third variable, such as income, that relates to both factors and makes it more difficult to afford a healthy diet and time to exercise as well as healthcare benefits.</li>
             <li>The strongest correlation was a positive correlation between obesity and a smoking habit of 0.74. A smoking habit is also more prevalent among the obese and vice versa. It seems lax standards of personal health spread across aspects of one’s life.</li>
@@ -98,9 +98,9 @@
   <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-csv/0.71/jquery.csv-0.71.min.js"></script>
 
-  <script type="text/javascript" src="assets/js/app.js"></script>
-  <script type="text/javascript" src="assets/js/geojson.js"></script>
-  <script type="text/javascript" src="assets/js/logic.js"></script>
+  <script type="text/javascript" src="static/js/app.js"></script>
+  <script type="text/javascript" src="static/js/geojson.js"></script>
+  <script type="text/javascript" src="static/js/logic.js"></script>
 
 </body>
 
