adjusted header link

--- a/StarterCode/plot.html
+++ b/StarterCode/plot.html
@@ -21,7 +21,7 @@
 
 <body>
   <div class="menu">
-    <a class="header" href="./">Health Risks</a>
+    <a class="header" href="./plot.html">Health Risks</a>
   </div>
 
   <div class="container">
