--- a/StarterCode/index.html
+++ b/StarterCode/index.html
@@ -9,10 +9,10 @@
 <body>
     <div class="background">
         <div class="menu">
-            <a class="header" href="./plot.html">Health Risks</a>
+            <a class="header" href="https://camiloibanez.github.io/Health-Risks-Comparison/StarterCode/plot.html">Health Risks</a>
         </div>
         <div class="titles">
-            <h4 class="description"><a class="initial" href="./plot.html">Explore</a> the 2014 ACS 1-year estimates from the U.S. Census Bureau and the Behavioral Risk Factor Surveillance System. The data set includes data on rates of income, obesity, poverty, smoking, healthcare, and age by state. </h4>
+            <h4 class="description"><a class="initial" href="https://camiloibanez.github.io/Health-Risks-Comparison/StarterCode/plot.html">Explore</a> the 2014 ACS 1-year estimates from the U.S. Census Bureau and the Behavioral Risk Factor Surveillance System. The data set includes data on rates of income, obesity, poverty, smoking, healthcare, and age by state. </h4>
         </div>
     </div>
 </body>
