--- a/StarterCode/plot.html
+++ b/StarterCode/plot.html
@@ -15,13 +15,13 @@
    integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
    crossorigin=""></script>
 
-   <script type="text/javascript" src="static/js/choropleth.js"></script>
+  <script type="text/javascript" src="static/js/choropleth.js"></script>
 
 </head>
 
 <body>
   <div class="menu">
-    <a class="header" href="./plot.html">Health Risks</a>
+    <a class="header" href="https://camiloibanez.github.io/Health-Risks-Comparison/StarterCode/plot.html">Health Risks</a>
   </div>
 
   <div class="container">
